# ray-marching

./: .gitignore  CMakeLists.txt  backend.py  evaluate_aabb.py  raymarching.py  setup.py  test  test.cpp  test_jz.py
include/: bindings.h
src/: bindings.cpp  raymarching.cu
test_python/: test_aabb.py
